changed html source tag types to 'module'

--- a/regex.html
+++ b/regex.html
@@ -11,8 +11,9 @@
             font-family: 'Consolas'
         }
     </style>
-    <script type="text/javascript" src="nfa.js"></script>
-    <script type="text/javascript" src="regex.js"></script>
+    <script src="js/NSet.js" type="module"></script>
+    <script src="js/NFA.js" type="module"></script>
+    <script src="js/Regex.js" type="module"></script>
     <script type="text/javascript">
         (function() {
             let x = new RESequence([new RESymbol("a"), new RESymbol("b"), new RESymbol("c")]);
