--- a/regex.html
+++ b/regex.html
@@ -11,16 +11,12 @@
             font-family: 'Consolas'
         }
     </style>
-    <script src="js/NSet.js" type="module"></script>
-    <script src="js/NFA.js" type="module"></script>
-    <script src="js/Regex.js" type="module"></script>
+    <script src="bundle.js" type="text/javascript"></script>
     <script type="text/javascript">
-        (function() {
-            let x = new REConcat([new RESymbol("a"), new RESymbol("b"), new RESymbol("c")]);
-            let y = new REConcat([x, x]);
-            // console.log(x.getNFA().checkString("abc") + " should be true");
-            console.log(y.getNFA().checkString("abc") + " should be true");
-            console.log(y.getNFA().checkString("abcabc") + " should be true");
-        })();
+        let x = new REConcat([new RESymbol("a"), new RESymbol("b"), new RESymbol("c")]);
+        let y = new REConcat([x, x]);
+        // console.log(x.getNFA().checkString("abc") + " should be true");
+        console.log(y.getNFA().checkString("abc") + " should be false");
+        console.log(y.getNFA().checkString("abcabc") + " should be true");
     </script>
 </HTML>
